--- a/_includes/title.html
+++ b/_includes/title.html
@@ -12,7 +12,7 @@
   </h1>
 
   <!-- Add something about you in p tag-->
-  <p>Software | linux | erlang | go | d | more....</p>
+  <p>software | linux | erlang | go | d | more....</p>
   <hr/>
   
   {% include nav-links.html %} 
